optimized code, Add persistent cookie support