@@ -1,9 +1,14 @@
 package com.zlq.zhttpclient.library;
 
 import android.content.Context;
+import android.text.TextUtils;
 
 import java.io.IOException;
+import java.net.CookieManager;
+import java.net.CookiePolicy;
+import java.net.CookieStore;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collections;
 import java.util.HashMap;
@@ -28,9 +33,11 @@ public class ZHttpClient {
 
 	public static final String HEADER_CONTENT_ENCODING = "Content-Encoding";
 	public static final String HEADER_ACCEPT_ENCODING = "Accept-Encoding";
+	public static final String HEADER_REQUEST_COOKIE = "Cookie";
 	public static final String ENCODING_GZIP = "gzip";
-	public static final String ENCODING_UTF8 = "UTF-8";
+	public static final String HEADER_USER_AGENT = "User-Agent";
 
+	public static final String VERSION = "1.1.0";
 	public static final int DEFAULT_HTTP_PORT = 80;
 	public static final int DEFAULT_HTTPS_PORT = 443;
 	public static final int DEFAULT_MAX_CONNECTIONS = 10;
@@ -44,6 +51,7 @@ public class ZHttpClient {
 	private final Map<String, String> clientHeaderMap;
 	private boolean isUrlEncodingEnabled = true;
 	private SSLSocketFactory mSSLSocketFactory;
+	private CookieManager mCookieManager;
 	private int httpPort;
 	private int httpsPort;
 	private String encodingCharset;
@@ -62,18 +70,30 @@ public class ZHttpClient {
 		requestMap = new HashMap<Context, List<RequestHandle>>();
 		clientHeaderMap = new HashMap<String, String>();
 
+		setHeader(HEADER_USER_AGENT, String.format("ZHttpClient/%s (https://github.com/zhanglq060/ZHttpClient)", VERSION));
 		//default content_encoding is gzip
 		setHeader(HEADER_CONTENT_ENCODING, ENCODING_GZIP);
-		setHeader(HEADER_CONTENT_ENCODING, ENCODING_GZIP);
+		setHeader(HEADER_ACCEPT_ENCODING, ENCODING_GZIP);
 
 		threadPool = getDefaultThreadPool();
 	}
 
-	private HttpURLConnection initUrlConnection(String url) throws IOException {
-		if(url == null || url.length() == 0){
+	/**
+	 * 通过URL 初始化 HttpURLConnection
+	 * @param url 请求的URL
+	 * @return HttpURLConnection
+	 * @throws IOException
+	 */
+	private HttpURLConnection initUrlConnection(URL url) throws IOException {
+		if(url == null || url.toString().length() == 0){
 			throw new RuntimeException("initConnection url is empty");
 		}
-		HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+		HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+
+		if (mCookieManager != null){
+			setHeader(HEADER_REQUEST_COOKIE, TextUtils.join(";", mCookieManager.getCookieStore().get(URI.create(url.getHost()))));
+		}
+
 		Iterator iterator = clientHeaderMap.entrySet().iterator();
 		while (iterator.hasNext()){
 			Map.Entry<String,String> entry = (Map.Entry<String, String>) iterator.next();
@@ -127,11 +147,13 @@ public class ZHttpClient {
 				requestUrl += requestUrl.contains("?") ? "&" : "?";
 				requestUrl += params.getParams(isUrlEncodingEnabled);
 			}
-			connection = initUrlConnection(requestUrl);
+			connection = initUrlConnection(new URL(requestUrl));
 			connection.setDoInput(true);
 			connection.setDoOutput(false);
 			connection.setRequestMethod(RequestMethod.GET);
-			RequestExecute requestExecute = new RequestExecute(connection, null, listener);
+			RequestExecute requestExecute = new RequestExecute(connection, params, listener);
+			requestExecute.setCookieManager(mCookieManager);
+
 			if(listener.getUseSynchronousMode()){
 				requestExecute.run();
 			}else{
@@ -178,15 +200,21 @@ public class ZHttpClient {
 
 		HttpURLConnection connection = null;
 		try {
-			if (params != null){
-				setHeader(RequestParams.CONTENT_TYPE, RequestParams.MULTIPART_FROM_DATA + ";boundary=" + params.getBoundary());
+			if (params != null && params.isContentTypeJson()){
+				setHeader(RequestParams.CONTENT_TYPE, RequestParams.CONTENT_TYPE_JSON
+						+ ";charset=" + RequestParams.ENCODING);
+			}else if(params != null){
+				setHeader(RequestParams.CONTENT_TYPE, RequestParams.CONTENT_TYPE_MULTIPART_FORM_DATA
+						+ ";boundary=" + params.getBoundary());
 			}
 
-			connection = initUrlConnection(url);
+			connection = initUrlConnection(new URL(url));
 			connection.setDoInput(true);
 			connection.setDoOutput(true);
 			connection.setRequestMethod(RequestMethod.POST);
 			RequestExecute requestExecute = new RequestExecute(connection, params, listener);
+			requestExecute.setCookieManager(mCookieManager);
+
 			if(listener.getUseSynchronousMode()){
 				requestExecute.run();
 			}else{
@@ -227,4 +255,9 @@ public class ZHttpClient {
 	public void setSSLSocketFactory(SSLSocketFactory sslSocketFactory) {
 		this.mSSLSocketFactory = sslSocketFactory;
 	}
+
+	public void setCookieStore(CookieStore cookieStore){
+		this.mCookieManager = new CookieManager(cookieStore, CookiePolicy.ACCEPT_ALL);
+	}
+
 }
